--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/console": "~2.1|~3.0",
         "symfony/form": "~2.1|~3.0",
         "symfony/property-access": "~2.3|~3.0",
-        "ruflin/elastica": "~3.0.0-beta1@dev",
+        "ruflin/elastica": "~3.0.0-beta1",
         "psr/log": "~1.0"
     },
     "require-dev":{
@@ -42,5 +42,6 @@
         "branch-alias": {
             "dev-master": "3.2.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
